--- a/css/pages/list.css
+++ b/css/pages/list.css
@@ -126,3 +126,80 @@
 .page-list .meta .editors li a:hover {
     text-decoration: underline;
 }
+
+.tags {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+    margin-top: 8px;
+    justify-content: flex-start;
+}
+
+.tag {
+    background-color: var(--color-primary);
+    color: var(--color-on-primary);
+    padding: 4px 8px;
+    border-radius: 8px;
+    font-family: "Lexend Deca", sans-serif;
+    font-size: 17.1428571429px;
+}
+
+.filter-container {
+    margin-bottom: 1rem;
+    padding: 1rem;
+    background-color: var(--color-background-hover);
+    border-radius: 0.5rem;
+}
+
+.filter-container input[type="text"] {
+    width: 100%;
+    padding: 0.5rem;
+    margin-bottom: 1rem;
+    border-radius: 0.25rem;
+    border: 1px solid var(--color-on-background);
+    background-color: var(--color-background);
+    color: var(--color-on-background);
+}
+
+.tag-filters {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.tag-filter-options {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+}
+
+.tag-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+}
+
+.tag-list label {
+    display: flex;
+    align-items: center;
+    gap: 0.25rem;
+    cursor: pointer;
+}
+
+.toggle-filters-button {
+    background-color: var(--color-primary);
+    color: var(--color-on-primary);
+    border: none;
+    border-radius: 0.5rem;
+    padding: 0.75rem 1rem;
+    margin-bottom: 1rem;
+    cursor: pointer;
+    font-family: "Lexend Deca", sans-serif;
+    font-size: 1rem;
+    width: 100%;
+}
+
+.toggle-filters-button:hover {
+    background-color: var(--color-primary);
+    filter: brightness(1.4)
+}
